// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / Action 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Add8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M3 5v3h2V5h3V3H5V0H3v3H0v2h3z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bolt8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M5.167 0L.5 4.5h2.917L2.833 8 7.5 3.5H4.583L5.167 0z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Check8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M1.504 2.648L3.126 4.27 6.496.9 7.91 2.314 3.126 7.098.09 4.062l1.414-1.414z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronDown8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronLeft8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={9}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M7.414.014l-4 4 4 4H4.586l-4-4 4-4h2.828z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronRight8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={9}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M.586 8.014l4-4-4-4h2.828l4 4-4 4H.586z"
        fill="currentColor"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronUp8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M8 7.418l-4-4-4 4V4.59l4-4 4 4v2.828z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Cross8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M2.586 4L0 6.586 1.414 8 4 5.414 6.586 8 8 6.586 5.414 4 8 1.414 6.586 0 4 2.586 1.414 0 0 1.414 2.586 4z"
        fill="currentColor"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Dot8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <circle
        cx={4}
        cy={4}
        fill="currentColor"
        r={4}
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExternalLink8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M4.586 2H1l2-2h5v5L6 7V3.414L1.414 8 0 6.586 4.586 2z"
        fill="currentColor"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Search8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        clipRule="evenodd"
        d="M3 0C1.34315 0 0 1.34315 0 3C0 4.65685 1.34315 6 3 6C3.46315 6 3.90178 5.89505 4.29342 5.70763L6.58579 8L8 6.58579L5.70763 4.29341C5.89505 3.90178 6 3.46315 6 3C6 1.34315 4.65685 0 3 0ZM2 3C2 2.44772 2.44772 2 3 2C3.55228 2 4 2.44772 4 3C4 3.55228 3.55228 4 3 4C2.44772 4 2 3.55228 2 3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        TickerDown8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M4 7L0 1L8 1L4 7Z"
        fill="currentColor"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        TickerUp8
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={8}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={8}
    >
      <path
        d="M4 1L8 7L0 7L4 1Z"
        fill="currentColor"
      />
      <title>
        13
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Action 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Add16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        AddCircle16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M7 12L7 9H4L4 7H7L7 4H9V7H12V9H9V12H7Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM14 8C14 11.3137 11.3137 14 8 14C4.68629 14 2 11.3137 2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        AddCircleFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM7 12V9H4V7H7V4H9V7H12V9H9V12H7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Archive16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M0 0V6H16V0H0ZM14 2H2V4H14V2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M3 14V6H1V16H15V6H13V14H3Z"
        fill="currentColor"
      />
      <path
        d="M5 10H11V8H5V10Z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowDown16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M6.998 11.17l-4-4v2.828l5 5 5-5V7.168l-4 4V1.002h-2V11.17z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowLeft16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M4.828 7l4-4H6L1 8l5 5h2.828l-4-4h10.167V7H4.828z"
        fill="currentColor"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowRight16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M11.167 9l-4 4h2.828l5-5-5-5H7.167l4 4H1v2h10.167z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowUp16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8.998 4.83l4 4V6.003l-5-5-5 5v2.829l4-4v10.166h2V4.832z"
        fill="currentColor"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bolt16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M9.833 2L2.5 8.75h4.583L6.167 14 13.5 7.25H8.917L9.833 2z"
        fill="currentColor"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Calendar16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M11 1H5V0H3v1H0v15h16V1h-3V0h-2v1zM3 4V3H2v2h12V3h-1v1h-2V3H5v1H3zm11 3H2v7h12V7z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Check16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CheckCircle16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M6.52513 11.9459L12.5355 5.93553L11.1213 4.52131L6.52513 9.11751L4.40381 6.99619L2.98959 8.4104L6.52513 11.9459Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM14 8C14 11.3137 11.3137 14 8 14C4.68629 14 2 11.3137 2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CheckCircleFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM12.5356 5.93551L6.52516 11.9459L2.98962 8.41039L4.40384 6.99618L6.52516 9.11749L11.1214 4.5213L12.5356 5.93551Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronDown16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M0 2.58l8 8 8-8v2.828l-8 8-8-8V2.58z"
        fill="currentColor"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronLeft16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M13.42 0l-8 8 8 8h-2.828l-8-8 8-8h2.828z"
        fill="currentColor"
      />
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronRight16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
        fill="currentColor"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronUp16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M16 13.42l-8-8-8 8v-2.828l8-8 8 8v2.828z"
        fill="currentColor"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Cross16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M9.414 8l5.793-5.793L13.793.793 8 6.586 2.207.793.793 2.207 6.586 8 .793 13.793l1.414 1.414L8 9.414l5.793 5.793 1.414-1.414L9.414 8z"
        fill="currentColor"
      />
      <title>
        18
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CrossCircle16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M6.58579 7.99999L4.46447 10.1213L5.87868 11.5355L8 9.41421L10.1213 11.5355L11.5355 10.1213L9.41421 7.99999L11.5355 5.87867L10.1213 4.46446L8 6.58578L5.87868 4.46446L4.46447 5.87867L6.58579 7.99999Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM14 8C14 11.3137 11.3137 14 8 14C4.68629 14 2 11.3137 2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        19
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CrossCircleFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM4.46448 10.1213L6.5858 7.99998L4.46448 5.87866L5.87869 4.46445L8.00001 6.58577L10.1213 4.46445L11.5355 5.87866L9.41422 7.99998L11.5355 10.1213L10.1213 11.5355L8.00001 9.4142L5.87869 11.5355L4.46448 10.1213Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        20
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Edit16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M14.693 2.48L13.52 1.31a3 3 0 00-4.242 0L.4 10.187v5.415h5.414l8.879-8.88a3 3 0 000-4.242zm-2.586.243l1.172 1.171a1 1 0 010 1.415l-.707.707L9.986 3.43l.707-.707a1 1 0 011.414 0zM8.572 4.844L2.4 11.016v2.586h2.586l6.171-6.172-2.585-2.586z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        21
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExportIcon16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M5 3.086v2.828l2-2V12h2V3.914l2 2V3.086l-3-3-3 3z"
        fill="currentColor"
      />
      <path
        d="M2 13v-2H0v2a3 3 0 003 3h10a3 3 0 003-3v-2h-2v2a1 1 0 01-1 1H3a1 1 0 01-1-1z"
        fill="currentColor"
      />
      <title>
        22
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExternalLink16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
        fill="currentColor"
      />
      <title>
        23
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Filter16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M16 4H0V2h16v2zM14 9H2V7h12v2zM12 14H4v-2h8v2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        24
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Hide16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M14 3.00003L3 14L1.58578 12.5858L2.97106 11.2005C1.0604 9.76734 0 8 0 8C0 8 3 3 8 3C8.97093 3 9.86643 3.18854 10.6792 3.49239L12.5858 1.58582L14 3.00003ZM9.06605 5.10555L8.1649 6.0067C8.11052 6.00226 8.05552 6 8 6C6.89543 6 6 6.89543 6 8C6 8.05552 6.00226 8.11052 6.0067 8.1649L4.40267 9.76893C4.07129 9.53672 3.76007 9.28351 3.47035 9.02012C3.08348 8.66842 2.75347 8.31475 2.486 8C2.75347 7.68525 3.08348 7.33158 3.47035 6.97988C4.65239 5.9053 6.19214 5 8 5C8.36662 5 8.72222 5.03723 9.06605 5.10555Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M12.2583 6.74175C12.3507 6.81998 12.4412 6.89945 12.5297 6.97988C12.9165 7.33158 13.2465 7.68525 13.514 8C13.2465 8.31475 12.9165 8.66842 12.5297 9.02012C11.3476 10.0947 9.80787 11 8.00003 11L6.21602 12.784C6.77794 12.9214 7.37326 13 8 13C13 13 16 8 16 8C16 8 15.1777 6.62946 13.6765 5.32349L12.2583 6.74175Z"
        fill="currentColor"
      />
      <title>
        25
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ImportIcon16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M11 8.23019V5.61879L8.99999 7.46534L8.99998 0L6.99998 1.74846e-07L6.99999 7.46534L5 5.61882V8.23021L7.99999 11L11 8.23019Z"
        fill="currentColor"
      />
      <path
        d="M2 13V11H0V13C0 14.6569 1.34315 16 3 16H13C14.6569 16 16 14.6569 16 13V11H14V13C14 13.5523 13.5523 14 13 14H3C2.44772 14 2 13.5523 2 13Z"
        fill="currentColor"
      />
      <title>
        26
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Login16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M12 14H5v-2H3v4h9a3 3 0 003-3V3a3 3 0 00-3-3H3v4h2V2h7a1 1 0 011 1v10a1 1 0 01-1 1z"
        fill="currentColor"
      />
      <path
        d="M7.23 5H4.62l1.846 2H1v2h5.465L4.62 11H7.23L10 8 7.23 5z"
        fill="currentColor"
      />
      <title>
        27
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Logout16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M11 2H4a1 1 0 00-1 1v10a1 1 0 001 1h7v-2h2v4H4a3 3 0 01-3-3V3a3 3 0 013-3h9v4h-2V2z"
        fill="currentColor"
      />
      <path
        d="M10.619 5h2.611L16 8l-2.77 3H10.62l1.846-2H7V7h5.465L10.62 5z"
        fill="currentColor"
      />
      <title>
        28
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Menu16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M0 1h16v2H0V1zM0 7h16v2H0V7zM16 13H0v2h16v-2z"
        fill="currentColor"
      />
      <title>
        29
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        More16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M10 8a2 2 0 11-4 0 2 2 0 014 0zM4 8a2 2 0 11-4 0 2 2 0 014 0zM16 8a2 2 0 11-4 0 2 2 0 014 0z"
        fill="currentColor"
      />
      <title>
        30
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Options16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
        fill="currentColor"
      />
      <path
        d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
        fill="currentColor"
      />
      <path
        d="M8 0C9.10457 -4.82823e-08 10 0.89543 10 2C10 3.10457 9.10457 4 8 4C6.89543 4 6 3.10457 6 2C6 0.89543 6.89543 4.82823e-08 8 0Z"
        fill="currentColor"
      />
      <title>
        31
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PriceAlert16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M9 1.083c2.838.476 5 2.944 5 5.917v3.586l1 1V14h-5a2 2 0 11-4 0H1v-2.414l1-1V7a6.002 6.002 0 015-5.917V0h2v1.083zM8 3a4 4 0 00-4 4v4.414L3.414 12h9.172L12 11.414V7a4 4 0 00-4-4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        32
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PriceAlertFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M9 1.083c2.838.476 5 2.944 5 5.917v3.586l1 1V14h-5a2 2 0 11-4 0H1v-2.414l1-1V7a6.002 6.002 0 015-5.917V0h2v1.083z"
        fill="currentColor"
      />
      <title>
        33
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Refresh16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M7.733 2.006L5.727 0h2.828l3.001 3.001L8.557 6H5.73l1.99-1.99A4 4 0 1012 8h2a6 6 0 11-6.267-5.994z"
        fill="currentColor"
      />
      <title>
        34
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Repeat16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M14 1v3.392A7.003 7.003 0 001.29 6h2.126a5.001 5.001 0 019.168 0H9l2 2h5V3l-2-2zM14.71 10h-2.126a5.001 5.001 0 01-9.168 0H7L5 8H0v5l2 2v-3.392A7.003 7.003 0 0014.71 10z"
        fill="currentColor"
      />
      <title>
        35
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Search16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M2.51 2.51a5.5 5.5 0 007.008 8.422l4.307 4.307 1.414-1.414-4.307-4.307A5.502 5.502 0 002.511 2.51zm1.415 6.365a3.5 3.5 0 114.95-4.95 3.5 3.5 0 01-4.95 4.95z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        36
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Share16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M12 6C11.2935 6 10.644 5.75577 10.1314 5.34712L6.92907 7.34855C6.97551 7.55829 7 7.77629 7 8C7 8.22372 6.97551 8.44171 6.92907 8.65146L10.1314 10.6529C10.644 10.2442 11.2935 10 12 10C13.6569 10 15 11.3431 15 13C15 14.6569 13.6569 16 12 16C10.3431 16 9 14.6569 9 13C9 12.7763 9.02448 12.5583 9.07091 12.3486L5.86858 10.3471C5.35597 10.7558 4.70651 11 4 11C2.34315 11 1 9.65685 1 8C1 6.34315 2.34315 5 4 5C4.70651 5 5.35598 5.24423 5.86858 5.65286L9.07092 3.65142C9.02449 3.44169 9 3.2237 9 3C9 1.34315 10.3431 0 12 0C13.6569 0 15 1.34315 15 3C15 4.65685 13.6569 6 12 6ZM3 8C3 8.36332 3.19375 8.68138 3.48357 8.8565C3.63431 8.94759 3.81103 9 4 9C4.55228 9 5 8.55229 5 8C5 7.44772 4.55228 7 4 7C3.81059 7 3.63347 7.05266 3.4825 7.14414C3.19328 7.3194 3 7.63713 3 8ZM12.5155 3.85705C12.365 3.94779 12.1886 4 12 4C11.4477 4 11 3.55228 11 3C11 2.64802 11.1818 2.33852 11.4567 2.16031C11.6131 2.05889 11.7997 2 12 2C12.5523 2 13 2.44772 13 3C13 3.36369 12.8058 3.68204 12.5155 3.85705ZM11.46 13.8418C11.6158 13.9419 11.8011 14 12 14C12.5523 14 13 13.5523 13 13C13 12.6352 12.8046 12.3159 12.5128 12.1413C12.3628 12.0516 12.1874 12 12 12C11.4477 12 11 12.4477 11 13C11 13.3534 11.1833 13.664 11.46 13.8418Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        37
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SortAscending16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M12 8.17155V11L8.00249 14.9975L3.99999 10.995L3.99999 8.16655L7.00249 11.169L7.0025 1.00244L9.0025 1.00244L9.00249 11.169L12 8.17155Z"
        fill="currentColor"
      />
      <title>
        38
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SortDescending16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M4 7.82845L4 5.00002L7.9975 1.00252L12 5.00503L12 7.83345L8.9975 4.83095L8.9975 14.9976L6.9975 14.9976L6.9975 4.83095L4 7.82845Z"
        fill="currentColor"
      />
      <title>
        39
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Subtract16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M0 9h16V7H0v2z"
        fill="currentColor"
      />
      <title>
        40
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SubtractCircle16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M4 9V7h8v2H4z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-2 0A6 6 0 112 8a6 6 0 0112 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        41
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SubtractCircleFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16A8 8 0 108 0a8 8 0 000 16zM4 9V7h8v2H4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        42
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Trash16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M5.5 12V6h2v6h-2zM8.5 6v6h2V6h-2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M10.118 0H5.882l-1.25 2.5H1v2h1V13a3 3 0 003 3h6a3 3 0 003-3V4.5h1v-2h-3.632L10.118 0zm-.986 2.5l-.25-.5H7.118l-.25.5h2.264zM4 4.5h8V13a1 1 0 01-1 1H5a1 1 0 01-1-1V4.5z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        43
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Watchlist16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 10a2 2 0 100-4 2 2 0 000 4z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M0 8s3 5 8 5 8-5 8-5-3-5-8-5-8 5-8 5zm2.486 0c.267-.315.597-.668.984-1.02C4.652 5.905 6.192 5 8 5c1.808 0 3.348.905 4.53 1.98.386.352.716.705.984 1.02-.268.315-.598.668-.984 1.02C11.348 10.095 9.808 11 8 11c-1.808 0-3.348-.905-4.53-1.98A11.09 11.09 0 012.486 8z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        44
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WatchlistFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M16 8s-3 5-8 5-8-5-8-5 3-5 8-5 8 5 8 5zm-8 2a2 2 0 100-4 2 2 0 000 4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        45
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WindowCollapse16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M0 7L7 7L7 0H5L5 5L0 5V7Z"
        />
        <path
          d="M16 9L9 9L9 16H11L11 11L16 11V9Z"
        />
        <path
          d="M9 7V0H11V5L16 5V7L9 7Z"
        />
        <path
          d="M7 16L7 9H0V11H5L5 16H7Z"
        />
      </g>
      <title>
        46
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WindowExpand16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M7 0H0V7L2 7L2 2L7 2L7 0Z"
        />
        <path
          d="M9 16L16 16V9H14L14 14L9 14V16Z"
        />
        <path
          d="M16 0V7H14V2H9V0H16Z"
        />
        <path
          d="M0 9V16H7V14H2V9H0Z"
        />
      </g>
      <title>
        47
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Action 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Add24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M11 13v10h2V13h10v-2H13V1h-2v10H1v2h10z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        AddCircle24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M11 18V13H6L6 11H11V6H13V11H18V13H13V18H11Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12ZM21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        AddCircleFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM11 18V13H6L6 11H11V6H13V11H18V13H13V18H11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Archive24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M1 1v7h22V1H1zm20 2H3v3h18V3z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M4 21V8H2v15h20V8h-2v13H4z"
        fill="currentColor"
      />
      <path
        d="M8 13.5h8v-2H8v2z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bolt24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={26}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M15 4L5 15h5l-1 7 10-11h-5l1-7z"
        fill="transparent"
        stroke="currentColor"
        strokeWidth={2}
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Calendar24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M7 1v1h10V1h2v1h4v21H1V2h4V1h2zm10 3v1h2V4h2v4H3V4h2v1h2V4h10zm4 6H3v11h18V10z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Check24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M8.778 17.435l-6.364-6.364L1 12.485l7.778 7.779 14.85-14.85L22.212 4 8.778 17.435z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CheckCircle24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M9.54756 14.3316L6.41421 11.1983L5 12.6125L9.54756 17.1601L18.2934 8.41421L16.8792 7L9.54756 14.3316Z"
        fill="currentColor"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CheckCircleFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM6.41421 11.1983L9.54756 14.3316L16.8792 7L18.2934 8.41421L9.54756 17.1601L5 12.6125L6.41421 11.1983Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronDown24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M2 6.051l9.973 9.5L22 6v2.45L11.973 18 2 8.5V6.051z"
        fill="currentColor"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronLeft24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M17.95 2l-9.5 9.973L18 22h-2.45L6 11.973 15.5 2h2.45z"
        fill="currentColor"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronRight24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M6.05 22l9.5-9.973L6 2h2.45L18 12.027 8.5 22H6.05z"
        fill="currentColor"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronUp24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M22 17.95l-9.973-9.5L2 18v-2.45L12.027 6 22 15.5v2.45z"
        fill="currentColor"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Cross24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M12.01 13.425l8.486 8.485 1.414-1.414-8.486-8.486 8.465-8.506-1.414-1.414-8.465 8.506-8.485-8.485-1.414 1.414 8.485 8.485-8.506 8.465 1.414 1.414 8.506-8.464z"
        fill="currentColor"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CrossCircle24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M10.5858 12L7.05025 15.5355L8.46447 16.9497L12 13.4142L15.5355 16.9497L16.9497 15.5355L13.4142 12L16.9497 8.46446L15.5355 7.05024L12 10.5858L8.46447 7.05024L7.05025 8.46446L10.5858 12Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CrossCircleFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.05025 15.5355L10.5858 12L7.05025 8.46445L8.46446 7.05023L12 10.5858L15.5355 7.05023L16.9497 8.46445L13.4142 12L16.9497 15.5355L15.5355 16.9497L12 13.4142L8.46446 16.9497L7.05025 15.5355Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Edit24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M18.018 1.028c.683-.098 1.448.053 2.013.619l2.122 2.12c.565.566.716 1.331.618 2.014-.097.681-.443 1.347-.972 1.876L6.657 22.799H1v-5.657L16.142 2c.529-.529 1.195-.875 1.877-.972zm.283 1.98c-.213.03-.492.154-.745.406L16.142 4.83l2.829 2.828 1.414-1.414c.252-.253.376-.531.406-.745.03-.214-.032-.296-.053-.316l-2.121-2.121c-.02-.02-.102-.084-.316-.053zm-.745 6.063l-2.828-2.828L3 17.97v2.828h2.828L17.556 9.071z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExportIcon24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M7.99999 6.00001V8.82844L11 5.82843L11 17H13L13 5.82843L16 8.82841V5.99999L12 2L7.99999 6.00001Z"
        fill="currentColor"
      />
      <path
        d="M4 19V16H2V19C2 20.6569 3.34315 22 5 22H19C20.6569 22 22 20.6569 22 19V16H20V19C20 19.5523 19.5523 20 19 20H5C4.44772 20 4 19.5523 4 19Z"
        fill="currentColor"
      />
      <title>
        18
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExternalLink24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M20.003 16.426V5.414L3.41 22.007l-1.414-1.414L18.589 4H6.973l2-2h13.03v12.426l-2 2z"
        fill="currentColor"
      />
      <title>
        19
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Filter24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M1 4h22v2H1V4zM4 11h16v2H4v-2zM17 18H7v2h10v-2z"
        fill="currentColor"
      />
      <title>
        20
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Hide24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3.4097 22L22 3.41L20.59 2L17.2249 5.36485C15.6999 4.55148 13.9477 4 12 4C4.58172 4 0 12 0 12C0 12 1.82831 15.1923 5.04501 17.5438L1.99548 20.5931L3.4097 22ZM6.47848 16.1105C5.8017 15.639 5.17618 15.1101 4.60689 14.5608C3.67414 13.6607 2.94469 12.7549 2.44928 12.0737L2.39599 12L2.44928 11.9263C2.94469 11.2451 3.67414 10.3393 4.60689 9.43923C6.50663 7.60614 9.03245 6 12 6C13.3404 6 14.5906 6.32766 15.7337 6.85591L14.0343 8.5552C13.4383 8.20246 12.7428 8 12 8C9.79086 8 8 9.79086 8 12C8 12.7427 8.2024 13.4381 8.55505 14.0341L6.47848 16.1105ZM10.0685 12.5208L12.5209 10.0685C12.3548 10.0238 12.1802 10 12 10C10.8954 10 10 10.8954 10 12C10 12.1801 10.0238 12.3547 10.0685 12.5208Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M10.5398 17.87C11.0134 17.9545 11.5004 18 12 18C14.9676 18 17.4934 16.3939 19.3931 14.5608C20.3259 13.6607 21.0553 12.7549 21.5507 12.0737L21.604 12L21.5507 11.9263C21.0553 11.2451 20.3259 10.3393 19.3931 9.43923C19.3217 9.37035 19.2495 9.30179 19.1763 9.23362L20.5913 7.81865C22.7843 9.87723 24 12 24 12C24 12 19.4183 20 12 20C10.8978 20 9.85829 19.8234 8.88708 19.5227L10.5398 17.87Z"
        fill="currentColor"
      />
      <title>
        21
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Login24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M19 3a1 1 0 011 1v16a1 1 0 01-1 1H8v-3H6v5h13a3 3 0 003-3V4a3 3 0 00-3-3H6v5h2V3h11z"
        fill="currentColor"
      />
      <path
        d="M7.828 8l3 3H2v2h8.828l-3 3h2.829l4-4-4-4H7.828z"
        fill="currentColor"
      />
      <title>
        22
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LoginStay24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M8 3v1H6V1h13a3 3 0 013 3v16a3 3 0 01-3 3H6v-3h2v1h11a1 1 0 001-1V4a1 1 0 00-1-1H8z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M2 18.5v-8h12v8H2zm2-6v4h8v-4H4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M8 7.5a2 2 0 00-2 2H4a4 4 0 118 0h-2a2 2 0 00-2-2z"
        fill="currentColor"
      />
      <title>
        23
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Logout24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M4 20a1 1 0 001 1h11v-3h2v5H5a3 3 0 01-3-3V4a3 3 0 013-3h13v5h-2V3H5a1 1 0 00-1 1v16z"
        fill="currentColor"
      />
      <path
        d="M18.172 11l-3-3H18l4 4-4 4h-2.828l3-3H9.343v-2h8.829z"
        fill="currentColor"
      />
      <title>
        24
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Menu24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M1 4h22v2H1V4zM1 11h22v2H1v-2zM23 18H1v2h22v-2z"
        fill="currentColor"
      />
      <title>
        25
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        More24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M7 12a3 3 0 10-6 0 3 3 0 006 0zm-2 0a1 1 0 10-2 0 1 1 0 002 0zM15 12a3 3 0 10-6 0 3 3 0 006 0zm-2 0a1 1 0 10-2 0 1 1 0 002 0zM20 9a3 3 0 110 6 3 3 0 010-6zm0 2a1 1 0 110 2 1 1 0 010-2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        26
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Options24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 7C13.6569 7 15 5.65685 15 4C15 2.34315 13.6569 1 12 1C10.3431 1 9 2.34315 9 4C9 5.65685 10.3431 7 12 7ZM12 5C12.5523 5 13 4.55228 13 4C13 3.44772 12.5523 3 12 3C11.4477 3 11 3.44772 11 4C11 4.55228 11.4477 5 12 5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15ZM12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12C11 12.5523 11.4477 13 12 13Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M15 20C15 21.6569 13.6569 23 12 23C10.3431 23 9 21.6569 9 20C9 18.3431 10.3431 17 12 17C13.6569 17 15 18.3431 15 20ZM13 20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20C11 19.4477 11.4477 19 12 19C12.5523 19 13 19.4477 13 20Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        27
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PriceAlert24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 1a2 2 0 00-1.846 1.229A7.503 7.503 0 004.5 9.5v3.963L3 16.099V20h6a3 3 0 106 0h6v-3.9l-1.5-2.637V9.5a7.503 7.503 0 00-5.654-7.271A2 2 0 0012 1zm1 19h-2a1 1 0 102 0zM12 4a5.5 5.5 0 00-5.5 5.5v4.492L5 16.628V18h14v-1.372l-1.5-2.636V9.5A5.5 5.5 0 0012 4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        28
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PriceAlertFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M10.154 2.229a2 2 0 013.692 0A7.503 7.503 0 0119.5 9.5v3.963l1.5 2.636V20h-6a3 3 0 11-6 0H3v-3.9l1.5-2.637V9.5a7.503 7.503 0 015.654-7.271z"
        fill="currentColor"
      />
      <title>
        29
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Progress24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M20.453 19.04l-1.421-1.422A8.958 8.958 0 0020.945 13h2.01a10.95 10.95 0 01-2.502 6.04zM19.04 20.453l-1.422-1.421A8.958 8.958 0 0113 20.945v2.01a10.95 10.95 0 006.04-2.502zM4.968 17.618l-1.421 1.421A10.95 10.95 0 011.045 13h2.01a8.958 8.958 0 001.913 4.618zM19.032 6.382l1.421-1.421A10.95 10.95 0 0122.955 11h-2.01a8.958 8.958 0 00-1.913-4.618zM6.382 19.032A8.957 8.957 0 0011 20.945v2.01a10.95 10.95 0 01-6.04-2.502l1.422-1.421zM17.618 4.968A8.957 8.957 0 0013 3.055v-2.01a10.95 10.95 0 016.04 2.502l-1.422 1.421z"
        fill="currentColor"
      />
      <title>
        30
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Refresh24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M13.243 3l-3-3h2.828l4 4-4 4h-2.828l3-3H12a7 7 0 107 7h2a9 9 0 11-9-9h1.243z"
        fill="currentColor"
      />
      <title>
        31
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Repeat24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M7.05 7.05a6.984 6.984 0 00-2.032 5.456H3.014a9 9 0 0115.35-6.87l.879.879V2.272l2 2V9.93h-5.657l-2-2h4.242l-.878-.879a7 7 0 00-9.9 0zM16.95 16.95a6.984 6.984 0 002.032-5.456h2.004a9 9 0 01-15.35 6.87l-.879-.879v4.243l-2-2V14.07h5.657l2 2H6.172l.878.879a7 7 0 009.9 0z"
        fill="currentColor"
      />
      <title>
        32
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Save24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M17 1H7C5.34315 1 4 2.29491 4 3.89227V23L12 18.1029L20 23V3.89227C20 2.29491 18.6569 1 17 1ZM17 2.92818L17.1166 2.93467C17.614 2.99036 18 3.39785 18 3.89227V19.4912L12 15.819L6 19.4912V3.89227C6 3.35982 6.44772 2.92818 7 2.92818H17Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        33
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Search24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M9.5 1.5a8 8 0 104.906 14.32l6.387 6.387 1.414-1.414-6.387-6.387A8 8 0 009.5 1.5zm-6 8a6 6 0 1112 0 6 6 0 01-12 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        34
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Share24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M18 9C16.8888 9 15.8833 8.54685 15.1585 7.81526L9.85018 10.9118C9.94778 11.2578 10 11.6228 10 12C10 12.3772 9.94778 12.7422 9.85018 13.0882L15.1585 16.1847C15.8833 15.4531 16.8887 15 18 15C20.2091 15 22 16.7909 22 19C22 21.2091 20.2091 23 18 23C15.7909 23 14 21.2091 14 19C14 18.6228 14.0522 18.2578 14.1498 17.9118L8.84152 14.8153C8.11666 15.5469 7.11125 16 6 16C3.79086 16 2 14.2091 2 12C2 9.79086 3.79086 8 6 8C7.11125 8 8.11666 8.45315 8.84153 9.18474L14.1498 6.08824C14.0522 5.74224 14 5.37722 14 5C14 2.79086 15.7909 1 18 1C20.2091 1 22 2.79086 22 5C22 7.20914 20.2091 9 18 9ZM20 5C20 6.10457 19.1046 7 18 7C16.8967 7 16 6.10905 16 5.00448C16 3.89991 16.8954 3 18 3C19.1046 3 20 3.89543 20 5ZM6 10C6.36123 10 6.70009 10.0958 6.99258 10.2633C7.59205 10.6066 7.99674 11.2515 7.99998 11.991C7.99999 11.994 8 11.997 8 12C8 12.003 7.99999 12.0059 7.99998 12.0089C7.99674 12.7485 7.59205 13.3934 6.99257 13.7367C6.70008 13.9042 6.36122 14 6 14C4.89543 14 4 13.1046 4 12C4 10.8954 4.89543 10 6 10ZM16 19C16 20.1046 16.8954 21 18 21C19.1046 21 20 20.1046 20 19C20 17.8954 19.1046 17 18 17C16.8954 17 16 17.8954 16 19Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        35
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Subtract24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M1 11h22v2H1z"
        fill="currentColor"
      />
      <title>
        36
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SubtractCircle24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M19 11H5v2h14v-2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11zm-2 0a9 9 0 11-18 0 9 9 0 0118 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        37
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SubtractCircleFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11zm8-12H4v2h16v-2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        38
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Trash24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M14.535 1h-5.07l-2 3H4v2h16V4h-3.465l-2-3zm-.403 3l-.667-1h-2.93L9.87 4h4.263z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M4 20V7h2v13a1 1 0 001 1h10a1 1 0 001-1V7h2v13a3 3 0 01-3 3H7a3 3 0 01-3-3z"
        fill="currentColor"
      />
      <path
        d="M9 9v9h2V9H9zM13 18V9h2v9h-2z"
        fill="currentColor"
      />
      <title>
        39
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Watchlist24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M0 12s4.582 8 12 8 12-8 12-8-4.582-8-12-8-12 8-12 8zm2.396 0l.053.074a19.165 19.165 0 002.158 2.487C6.507 16.394 9.032 18 12 18s5.493-1.606 7.393-3.44A19.16 19.16 0 0021.604 12a19.158 19.158 0 00-2.21-2.56C17.493 7.605 14.967 6 12 6S6.507 7.606 4.607 9.44A19.163 19.163 0 002.396 12z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M12 10a2 2 0 100 4 2 2 0 000-4zm-4 2a4 4 0 118 0 4 4 0 01-8 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        40
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WatchlistFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 20c7.418 0 12-8 12-8s-4.582-8-12-8-12 8-12 8 4.582 8 12 8zm0-5a3 3 0 100-6 3 3 0 000 6z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        41
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Action 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Add32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M15 17v14h2V17h14v-2H17V1h-2v14H1v2h14z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowDown32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M27 17.172l-10 10V1h-2v26.176l-10-10v2.828L15.996 31H16l11-11v-2.828z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowLeft32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M14.828 27l-10-10H31v-2H4.824l10-10h-2.828L1 15.996V16l11 11h2.828z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowRight32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M17.172 5l10 10H1v2h26.176l-10 10h2.828L31 16.004V16L20 5h-2.828z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ArrowUp32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M5 14.828l10-10V31h2V4.824l10 10v-2.828L16.004 1H16L5 12v2.828z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Calendar32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M23 2H9V1H7v1H1v29h30V2h-6V1h-2v1zM7 5V4H3v5h26V4h-4v1h-2V4H9v1H7zm22 6H3v18h26V11z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Check32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M11.057 24.132l-9.193-9.193L.45 16.355 11.057 26.96 31.563 6.454 30.148 5.04 11.057 24.132z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronDown32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M1 9.918V7.09l15 15 15-15v2.828l-15 15-15-15z"
        fill="currentColor"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronLeft32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M22.086 1.004h2.828l-15 15 15 15h-2.828l-15-15 15-15z"
        fill="currentColor"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronRight32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M9.914 31.004H7.086l15-15-15-15h2.828l15 15-15 15z"
        fill="currentColor"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ChevronUp32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M31 22.102v2.828l-15-15-15 15v-2.828l15-15 15 15z"
        fill="currentColor"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Cross32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M3.274 1.86L1.86 3.274l12.728 12.728L1.86 28.73l1.414 1.414 12.728-12.728L28.73 30.144l1.414-1.414-12.728-12.728L30.144 3.274 28.73 1.86 16.002 14.588 3.274 1.86z"
        fill="currentColor"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        CrossCircle32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M8.05023 22.5356L14.5858 16L8.05023 9.46451L9.46445 8.05029L16 14.5858L22.5355 8.05029L23.9497 9.46451L17.4142 16L23.9497 22.5356L22.5355 23.9498L16 17.4143L9.46445 23.9498L8.05023 22.5356Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M31 16C31 24.2843 24.2843 31 16 31C7.71573 31 1 24.2843 1 16C1 7.71573 7.71573 1 16 1C24.2843 1 31 7.71573 31 16ZM29 16C29 23.1797 23.1797 29 16 29C8.8203 29 3 23.1797 3 16C3 8.8203 8.8203 3 16 3C23.1797 3 29 8.8203 29 16Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Menu32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M1 5h30v2H1V5zM1 15h30v2H1v-2zM31 25H1v2h30v-2z"
        fill="currentColor"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        More32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M5 20a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 100-4 2 2 0 000 4zM16 20a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 100-4 2 2 0 000 4zM31 16a4 4 0 11-8 0 4 4 0 018 0zm-2 0a2 2 0 11-4 0 2 2 0 014 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Play32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M22.887 16L12 9.196v13.608L22.887 16zm-3.774 0L14 19.196v-6.392L19.113 16z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M31 16c0 8.284-6.716 15-15 15-8.284 0-15-6.716-15-15C1 7.716 7.716 1 16 1c8.284 0 15 6.716 15 15zm-2 0c0 7.18-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3s13 5.82 13 13z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Repeat32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M16 4C9.373 4 4 9.373 4 16H2C2 8.268 8.268 2 16 2c5.093 0 9.55 2.72 12 6.785V3l2 2v8h-8l-2-2h6.912C25.016 6.869 20.843 4 16 4zM16 28c6.627 0 12-5.373 12-12h2c0 7.732-6.268 14-14 14-5.093 0-9.55-2.72-12-6.785V29l-2-2v-8h8l2 2H5.088c1.896 4.131 6.069 7 10.912 7z"
        fill="currentColor"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Search32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M19.68 21.093a10.956 10.956 0 01-7.04 2.547c-6.075 0-11-4.925-11-11s4.925-11 11-11 11 4.925 11 11c0 2.678-.957 5.132-2.547 7.039l9.254 9.254-1.414 1.414-9.254-9.254zm1.96-8.453a9 9 0 11-18 0 9 9 0 0118 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        18
      </title>
    </svg>
  </div>
</div>
`;
